--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,20 +4,20 @@
     box-sizing: border-box;
 }
 
-
-.logoabajo {
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    height: 3rem;
-    gap: 1rem;
-    padding: 0.2rem
+/*Header*/
+header nav ul li {
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0.7rem;
+    gap: 0.5rem;
 }
 
-img {
-    max-width: 100%;
+header nav ul li {
+    list-style-type: none;
 }
 
+/*Carousel*/
 .slide {
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
@@ -28,40 +28,44 @@ img {
     width: 30rem;
 }
 
-.logoarriba {
-    display: flex;
-    justify-content: center;
-    background-color: crimson;
-    gap: 1rem;
 
-}
-
-
-
-.logoimg {
-    height: 3rem;
-}
-
-header nav ul li{
-    display: inline-flex;
-justify-content: space-evenly;
-    align-items: center;
-    margin: 0.7rem;
-    gap: 0.5rem;
-}
-
-header nav ul li {
-    list-style-type: none;
-}
-
+/*Body*/
 body {
     text-align: center;
-    background-color: black
+    background-color: black;
+background-image:url("../fotos/backkground.png") ;
 }
 
+
+
+/*Main*/
 .colorback {
+    background-color:#dc3545;
+   
+    
+}
+
+.colorfondo{
+background-size:cover;
+
+}
+
+
+img {
+    max-width: 100%;
+}
+
+.medidaimg {
+    display: flex;
+    justify-content: center;
+}
+
+/*Titulos*/
+.Titulo {
+    font-size: 2rem;
     background-color: crimson;
-    margin: 0.2rem
+    display: flex;
+    justify-content: space-around;
 }
 
 h1 {
@@ -71,27 +75,27 @@ h1 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.Titulo {
-    font-size: 2rem;
-    background-color: crimson;
-    display: flex;
-    justify-content: space-around;
-}
-
 h2:hover {
     color: crimson;
 }
 
+h2 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
+
+}
+
+/*Footer*/
 footer {
     background-color: black;
     text-align: center;
     text-decoration-color: rgb(253, 254, 254);
 }
 
-
-
+/*Cambios en etiquetas "a" y links*/
 a {
-    color: crimson;
+    color: antiquewhite;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -109,32 +113,42 @@ a {
 }
 
 a:hover {
-    color: antiquewhite;
+    color: crimson
 
 }
 
-.habilidad {
-    text-decoration: underline;
+/*Logo*/
+.logoarriba {
+    display: flex;
+    justify-content: center;
+    background-color: crimson;
+    gap: 1rem;
 }
 
-h2 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(255, 255, 255);
-    font-size: 1.5rem;
-
+.logoabajo {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    height: 3rem;
+    gap: 1rem;
+    padding: 0.2rem
 }
+
+.logoimg {
+    height: 3rem;
+}
+
+
+/*Textos y parrafos*/
+p{
+    background-color:rgb(139, 93, 94);
+    }
+
+
+
 
 .black {
     color: black;
 }
 
-.medidaimg {
-    display: flex;
-    justify-content: center;
-}
 
-@media (min-width:768px) {
-    header {
-        display: grid
-    }
-}
