--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,11 +21,17 @@ header nav ul li {
 .slide {
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
+    
 }
+.filtro{
 
+    filter:brightness(0.6) ;
+}
 .slide img {
-    height: 25rem;
-    width: 30rem;
+    height: 28rem;
+    width:10rem
+    ;
+    
 }
 
 
@@ -33,7 +39,7 @@ header nav ul li {
 body {
     text-align: center;
     background-color: black;
-background-image:url("../fotos/fondo2.jpg") ;
+background-image:url("../fotos/valorant-logo.jpg") ;
 }
 
 
@@ -49,7 +55,11 @@ background-size:cover;
 
 }
 
-
+.imagen{
+    height:35rem ;
+    width: 75rem
+    ;
+}
 
 img {
     max-width: 100%;
@@ -63,11 +73,15 @@ img {
 /*Titulos*/
 .Titulo {
     font-size: 2rem;
-    background-color: crimson;
     display: flex;
     justify-content: space-around;
+    
 }
-
+.distancia{
+    padding: 1rem;
+    font-size: 2.5rem;
+    
+}
 h1 {
     text-align: center;
     color: antiquewhite;
@@ -76,7 +90,7 @@ h1 {
 }
 
 h2:hover {
-    color: crimson;
+    color: rgb(248, 241, 243);
 }
 
 h2 {
@@ -84,6 +98,13 @@ h2 {
     color: rgb(255, 255, 255);
     font-size: 1.5rem;
 
+}
+h3{
+    color: rgb(255, 255, 255);
+}
+.white{
+    color: white;
+    padding:1.5rem;
 }
 
 /*Footer*/
@@ -142,19 +163,28 @@ a:hover {
 /*Textos y parrafos*/
 p{
     
-    background-color:rgba(244, 189, 189, 0.699) ;
+    color: aliceblue;
+    
+    font-size:1.5rem ;
+    margin: 1.5rem;
     
     }
 
-
+.fondito{
+    background-color: crimson;
+    color: rgb(250, 249, 249);
+}
 
 span{
     
     font-weight:bold ;
-    color: rgb(168, 3, 3);
+    color: crimson;
     
 }
+.span2{
+color: black;
 
+}
 .black {
     color: black;
 }
