--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,56 +1,27 @@
+$colorcrimson: crimson;
+$colorwhite: white;
+$colorblack: black;
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/*Header*/
-header nav ul li {
-    display: inline-flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0.7rem;
-    gap: 0.5rem;
-}
-
-header nav ul li {
-    list-style-type: none;
-}
-
-/*Carousel*/
-.slide {
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
-    
-}
-
-.slide img {
-    height: 28rem;
-    width:10rem
-    ;
-    
-}
-
-
 /*Body*/
 body {
     text-align: center;
-    background-color: black;
+    background-color: $colorblack;
 background-image:url("../fotos/valorant-logo.jpg") ;
 }
 
-
-
 /*Main*/
 .colorback {
-    background-color:crimson;
+    background-color:$colorcrimson;
     
 }
 
-.colorfondo{
-background-size:cover;
-
-}
 
 .imagen{
     height:35rem ;
@@ -81,40 +52,34 @@ img {
 }
 h1 {
     text-align: center;
-    color: antiquewhite;
-    background-color: crimson;
+    color: $colorwhite;
+    background-color: $colorcrimson;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h2:hover {
-    color: rgb(248, 241, 243);
+    color: $colorwhite;
 }
 
 h2 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(255, 255, 255);
+    color: $colorwhite;
     font-size: 1.5rem;
 
 }
 h3{
-    color: rgb(255, 255, 255);
+    color: $colorwhite;
 }
 .white{
-    color: white;
+    color: $colorwhite;
     
     font-size:1.5rem ;
 }
 
-/*Footer*/
-footer {
-    background-color: black;
-    text-align: center;
-    text-decoration-color: rgb(253, 254, 254);
-}
 
 /*Cambios en etiquetas "a" y links*/
 a {
-    color: antiquewhite;
+    color: $colorwhite;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -123,61 +88,40 @@ a {
 }
 
 .colorhover2 {
-    color: rgb(255, 255, 255);
+    color: $colorwhite;
 }
 
 a:hover {
-    color: crimson
+    color: $colorwhite;
 
-}
-
-/*Logo*/
-.logoarriba {
-    display: flex;
-    justify-content: center;
-    background-color: crimson;
-    gap: 1rem;
-}
-
-.logoabajo {
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    height: 3rem;
-    gap: 1rem;
-    padding: 0.2rem
-}
-
-.logoimg {
-    height: 3rem;
 }
 
 
 /*Textos y parrafos*/
 p{
     
-    color: aliceblue;
+    color:$colorwhite;
     font-size:1.5rem ;
     margin: 1rem;
     
     }
 
 .fondito{
-    background-color: crimson;
-    color: rgb(250, 249, 249);
+    background-color: $colorcrimson;
+    color: $colorwhite;
 }
 
 span{
     
     font-weight:bold ;
-    color: crimson;
+    color: $colorcrimson;
     
 }
 .span2{
-color: black;
+color: $colorblack;
 
 }
 .black {
-    color: black;
+    color: $colorblack;
 }
 
