--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,184 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 1 | @import "components/base";
- *   |         ^^^^^^^^^^^^^^^^^
- *   '
- *   scss\main.scss 1:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import \"components/base\";\d\a   \2502          ^^^^^^^^^^^^^^^^^\a   \2575 \a   scss\\main.scss 1:9  root stylesheet";
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+/*Header*/
+header nav ul li {
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0.7rem;
+    gap: 0.5rem;
+}
+
+header nav ul li {
+    list-style-type: none;
+}
+
+/*Carousel*/
+.slide {
+    margin-top: 0.3rem;
+    margin-bottom: 0.3rem;
+    
+}
+
+.slide img {
+    height: 28rem;
+    width:10rem
+    ;
+    
+}
+
+
+/*Body*/
+body {
+    text-align: center;
+    background-color: black;
+background-image:url("../fotos/valorant-logo.jpg") ;
+}
+
+
+
+/*Main*/
+.colorback {
+    background-color:crimson;
+    
+}
+
+.colorfondo{
+background-size:cover;
+
+}
+
+.imagen{
+    height:35rem ;
+    width: 75rem;
+    object-fit: cover ;
+    ;
+}
+
+img {
+    max-width: 100%;
+}
+
+.medidaimg {
+    display: flex;
+    justify-content: center;
+}
+
+/*Titulos*/
+.Titulo {
+    font-size: 2rem;
+    display: flex;
+    justify-content: space-around;
+    
+}
+.distancia{
+    padding: 1rem;
+    font-size: 2.2rem;
+    
+}
+h1 {
+    text-align: center;
+    color: antiquewhite;
+    background-color: crimson;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h2:hover {
+    color: rgb(248, 241, 243);
+}
+
+h2 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
+
+}
+h3{
+    color: rgb(255, 255, 255);
+}
+.white{
+    color: white;
+    
+    font-size:1.5rem ;
+}
+
+/*Footer*/
+footer {
+    background-color: black;
+    text-align: center;
+    text-decoration-color: rgb(253, 254, 254);
+}
+
+/*Cambios en etiquetas "a" y links*/
+a {
+    color: antiquewhite;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.link a {
+    text-decoration: none;
+}
+
+.colorhover2 {
+    color: rgb(255, 255, 255);
+}
+
+a:hover {
+    color: crimson
+
+}
+
+/*Logo*/
+.logoarriba {
+    display: flex;
+    justify-content: center;
+    background-color: crimson;
+    gap: 1rem;
+}
+
+.logoabajo {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    height: 3rem;
+    gap: 1rem;
+    padding: 0.2rem
+}
+
+.logoimg {
+    height: 3rem;
+}
+
+
+/*Textos y parrafos*/
+p{
+    
+    color: aliceblue;
+    font-size:1.5rem ;
+    margin: 1rem;
+    
+    }
+
+.fondito{
+    background-color: crimson;
+    color: rgb(250, 249, 249);
+}
+
+span{
+    
+    font-weight:bold ;
+    color: crimson;
+    
+}
+.span2{
+color: black;
+
+}
+.black {
+    color: black;
+}
+
